# source/back-end/app/routes/airlineRouter.js
@@ -1,0 +1,8 @@
+const express = require('express');
+const router = express.Router();
+const airlineController = require('../controllers/airlineController');
+
+router.get('/', airlineController.getAllAirlines);
+router.get('/id/:id', airlineController.getAirlineById);
+
+module.exports = router;
